package QMP;

public enum Material {
  ALGODON,
  LINO,
  JEAN,
  CUERO,
  PIQUE,
  ACETATO
}
