package QMP;

public class MotorDeSugerenciasBasico extends MotorDeSugerencias {
  @Override
  boolean esPrendaValidaPara(Usuario unUsuario, Prenda prenda) {
    return true;
  }
}
