@startuml Diagrama

class Prenda {
    tipo
    material
    colorPrincipal
    colorSecundario
    --
    categoria()
}
class Atuendo {
    prendaSuperior
    prendaInferior
    calzado
}

class Usuario {
    Prendas
    MotorDeSugerencias
    --
    generarSugerencias()
}

abstract class MotorDeSugerencias {
    --
    {abstract} esPrendaValidaPara(unUsuario, prenda)
    generarUnaSugerenciaPara(unUsuario)
    generarSugerenciasPara(unUsuario)
}

class MotorDeSugerenciasBasico {
  esPrendaValidaPara(unUsuario, prenda)
}

class MotorDeSugerenciasGerontofobico {
  esPrendaValidaPara(unUsuario, prenda)
}

enum TipoDePrenda {
    ZAPATOS
    ZAPATILLAS
    REMERA
    CAMISA_DE_MANGAS_CORTA
    PANTALON
    POLLERA
    COLLAR
    --
    getCategoria()
}

enum Trama {
  LISA
  RAYADA
  CON_LUNARES
  A_CUADROS
  ESTAMPADO
}

class Color {
    red
    green
    blue
}

enum Material {
  ALGODON
  LINO
  JEAN
  CUERO
}

enum Categoria {
  PARTE_SUPERIOR
  PARTE_INFERIOR
  CALZADO
  ACCESORIO
}

Atuendo --> "*"  Prenda
Usuario --> "*" Prenda
Usuario ..> Atuendo
Prenda --> Material
Prenda --> Color
Prenda --> Color
Prenda --> TipoDePrenda
Prenda --> Trama
TipoDePrenda --> Categoria
Usuario -l-> MotorDeSugerencias
MotorDeSugerenciasBasico -|> MotorDeSugerencias
MotorDeSugerenciasGerontofobico -|> MotorDeSugerencias

@enduml

